--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: '3.3'
-
 services:
   application:
     image: nginx
     ports:
-      - "2002:80"
+      - "80:80"
     volumes:
       - ./html:/usr/share/nginx/html
-    restart: always
+    restart: unless-stopped
 
